--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^2.2",
         "doctrine/orm": "^2.7",
+        "easycorp/easyadmin-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^4.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
@@ -40,7 +41,7 @@
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
         "symfony/debug-bundle": "^4.4",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.25",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
